Bug 73979 - LO writer cannot open a specific MS Word 8 file
Summary: LO writer cannot open a specific MS Word 8 file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium minor
Assignee: David Tardon
URL:
Whiteboard: target:4.3.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-01-23 15:28 UTC by Aleksander Morgado
Modified: 2014-01-27 14:45 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Test file (54.00 KB, application/msword)
2014-01-23 15:28 UTC, Aleksander Morgado
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aleksander Morgado 2014-01-23 15:28:06 UTC
Created attachment 92674 [details]
Test file

The attached file cannot be opened with LO 4.3/git, but it seems it can be opened without any problem with LO 4.1... regression maybe?
Comment 1 David Tardon 2014-01-23 18:18:54 UTC
(In reply to comment #0)
> Created attachment 92674 [details]
> Test file
> 
> The attached file cannot be opened with LO 4.3/git, but it seems it can be
> opened without any problem with LO 4.1... regression maybe?

This suggests it is something I broke with my recent WPXSvInputStream rework. I will investigate.
Comment 2 David Tardon 2014-01-27 14:44:51 UTC
The file is not WordPerfect, but MS Word 8.0.
Comment 3 Commit Notification 2014-01-27 14:45:55 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eb70c0993daf02513182b5d9a53d552622a8a6f1

fdo#73979 return 0 for unknown substreams



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.