fdo#73979 return 0 for unknown substreams

Change-Id: I8959891fc90544e2812651c0a2041f2760d90a83